# curvytron

./: .env  .gitignore  build-server.js  config.json.sample  deploy_modal.py  gulpfile.js  main.py  package.json  pyproject.toml
.claude/: settings.json
data/: curvytron_seeds.jsonl
modal/: deploy_modal.py  deploy_qwen.py  vllm_example.py
scripts/: common.py  eval_llm.py  generate_seeds.py  play_llm.py  play_random.py  play_selfplay.py  position_evaluator.py  prompts.py  rl-harness.js
slime/: README.md  eval_gym.py  eval_selfplay.py  game_viewer.py  modal_train.py  serve_bot.py  train_gym.py
slime/configs/: base.py  curvytron_selfplay.py  qwen_0_6b_selfplay.py
slime/curvytron/: agent_system.py  dataset.py  game_client.py  multi_agent_rollout.py  multi_agent_system.py  passthrough_rm.py  prompts.py  rollout.py
src/client/: app.js
src/client/controller/: ProfileController.js  QuickStartController.js  RoomController.js
src/client/model/: Game.js
src/client/repository/: GameRepository.js
src/client/service/: Profile.js
src/client/views/profile/: link.html  profile.html
src/client/views/quickstart/: waiting.html
src/server/: launcher.js
src/server/controller/: GameController.js  RLController.js  RoomsController.js
src/server/core/: Server.js  World.js
src/server/manager/: BonusManager.js  PrintManager.js
src/server/model/: BotClient.js  Game.js
src/server/model/Bonus/: Bonus.js
src/server/service/: BotController.js  RLManager.js  RLSession.js  RLStateBuilder.js  SeededRandom.js
src/shared/model/: BaseGame.js
